Fix blue button color for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 :root {
     --main-contrast: rgb(150, 232, 238);
     --red: rgb(255, 47, 47);
-    --blue: rgb(43, 91, 248);
+    --blue: rgb(93, 130, 252);
     --yellow: rgb(233, 253, 47);
     --green: rgb(21, 224, 72);
     --borders: rgba(51, 51, 51, 1);
